Fix carry-forward behavior, update results and manuscript
- Fix ffill carry-forward for patients with <11 QIs (simulation_runner.py)
- Fix AttributeError in report generation (main.py)
- Update config.yaml to match published parameters
- Rerun simulation with corrected code (seed=42, n=5000, 30 permutations)
- Update manuscript numbers: 79.9% (3,994) reach k<5, 86.2% (4,311) reach k<11
- Fix rarity model phrasing, add step/turn clarification
- Add conservative design notes to limitations
- Update supplementary tables S1, S2, S8 with fresh results

--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ simulation:
   reference_date: "2017-12-31"
 
   # Number of random permutations per patient (Model 2)
-  n_random_permutations: 100
+  n_random_permutations: 30
 
   # Random seed for reproducibility
   random_seed: 42
@@ -39,7 +39,7 @@ simulation:
   n_jobs: -1  # -1 = use all available cores
 
   # Sample size (null = use full population)
-  sample_size: null
+  sample_size: 5000
 
 # Quasi-identifier configuration
 quasi_identifiers:
