--- a/results/analysis_report.yaml
+++ b/results/analysis_report.yaml
@@ -1,11 +1,19 @@
-analysis_timestamp: '2026-01-11T17:30:42.028664'
-data_dir: synthea_dataset_csv/
-elapsed_time_seconds: 19319.0254611969
+analysis_timestamp: '2026-02-21T22:44:34.269280'
+data_dir: ./synthea_dataset_csv
+elapsed_time_seconds: 12190.888571977615
 figure_paths:
-  fig1_chat_mockup: assets/fig1.png
-  fig2_k_decay_curves: assets/fig2.pdf
-  fig3_steps_to_threshold: assets/fig3.pdf
-  fig4_survival_curves: assets/fig4.pdf
+  fig1_k_decay_curves:
+  - results/figures/fig1_k_decay_curves.pdf
+  - results/figures/fig1_k_decay_curves.png
+  fig2_turns_to_threshold:
+  - results/figures/fig2_turns_to_threshold.pdf
+  - results/figures/fig2_turns_to_threshold.png
+  fig4_survival_curves:
+  - results/figures/fig4_survival_curves.pdf
+  - results/figures/fig4_survival_curves.png
+  summary_panel:
+  - results/figures/summary_panel.pdf
+  - results/figures/summary_panel.png
 n_patients_population: 133262
 n_patients_simulated: 5000
 n_random_permutations: 30
